outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_00-23-35/evaluations/problem_eval-2230818146774836861_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores that combine distance, centrality, and recency of visits, with a dynamic exploration factor that scales with path length and remaining nodes, while maintaining a balance between greedy nearest-neighbor selection and more global optimization through importance-weighted random walks.}
                                                                                                                                                                                                                                                                                                                ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores that combine distance, centrality, and recency of visits, with a dynamic exploration factor that scales with path length and remaining nodes, while maintaining a balance between greedy nearest-neighbor selection and more global optimization through importance-weighted random walks.}
                                                                                                                                                                                                                                                                                                                ^
SyntaxError: unmatched '}'
